--- a/views/emails/newOrder.pug
+++ b/views/emails/newOrder.pug
@@ -1,8 +1,15 @@
 extends base
 
 block emailContent
-  p A new post has been created
+  p A new order has been created
 
   div(class="post-card")
-    h3(class="post-card__title") #{title}
-    p(class="post-card__content") #{content}
+    if productInCart.length === 0
+      p No orders available in new order
+    else
+      each product in productInCart
+        div(class="post-card")
+          h3 #{product.title}
+          p #{product.price}
+          p #{product.quantity}
+    p(class="post-card__content") Valor total: #{totalPrice}
